--- a/index.html
+++ b/index.html
@@ -1,88 +1,84 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crypto & Economische Indicatoren</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
   <style>
-    body { font-family: Arial; background: #f9f9f9; padding: 20px; }
+    body { font-family: Arial; padding: 20px; background: #f8f9fa; }
     h1 { text-align: center; }
-    .controls { text-align: center; margin-bottom: 20px; }
-    canvas { max-width: 1000px; margin: auto; display: block; }
+    .controls { margin-bottom: 20px; text-align: center; }
+    canvas { max-width: 100%; height: 500px; }
+    label { margin-right: 10px; }
   </style>
 </head>
 <body>
   <h1>Crypto & VS Economische Indicatoren</h1>
   <div class="controls">
-    <label>Selecteer crypto:</label>
-    <select id="cryptoSelect">
-      <option value="all">Alle</option>
-      <option value="bitcoin">Bitcoin (BTC)</option>
-      <option value="xrp">XRP</option>
-      <option value="bluzelle">Bluzelle</option>
-      <option value="vechain">VeChain</option>
-    </select>
-    <button onclick="fetchData()">Toon Grafiek</button>
+    <label><input type="checkbox" class="indicator" value="inflation_expectation" checked> Inflatieverwachting (%)</label>
+    <label><input type="checkbox" class="indicator" value="btc" checked> BTC ($)</label>
+    <label><input type="checkbox" class="indicator" value="xrp"> XRP ($)</label>
+    <label><input type="checkbox" class="indicator" value="vechain"> VeChain ($)</label>
+    <label><input type="checkbox" class="indicator" value="blz"> BLZ ($)</label>
+    <button onclick="updateChart()">Update Grafiek</button>
   </div>
-  <canvas id="chart" width="1000" height="500"></canvas>
-
+  <canvas id="chart"></canvas>
   <script>
-    const chartEl = document.getElementById("chart").getContext("2d");
+    const ctx = document.getElementById("chart").getContext("2d");
     let chart;
 
-    async function fetchData() {
-      const selected = document.getElementById("cryptoSelect").value;
-      const datasets = [];
-      const apiKey = "2e36ea2956c8ea9b075070975eb33c66";
-      const proxy = "https://api.allorigins.win/raw?url=";
+    const apiKey = "2e36ea2956c8ea9b075070975eb33c66"; // Jouw FRED API-key
 
-      const coins = {
-        bitcoin: "bitcoin",
+    async function fetchInflation() {
+      const res = await fetch(`https://api.stlouisfed.org/fred/series/observations?series_id=FWD5Y5Y&api_key=${apiKey}&file_type=json`);
+      const json = await res.json();
+      return json.observations
+        .filter(obs => obs.value !== ".")
+        .map(obs => ({ x: new Date(obs.date), y: parseFloat(obs.value) }));
+    }
+
+    async function fetchCrypto(id) {
+      const res = await fetch(`https://api.coingecko.com/api/v3/coins/${id}/market_chart?vs_currency=usd&days=30`);
+      const json = await res.json();
+      return json.prices.map(p => ({ x: new Date(p[0]), y: p[1] }));
+    }
+
+    async function updateChart() {
+      const indicators = Array.from(document.querySelectorAll('.indicator:checked')).map(el => el.value);
+      const datasets = [];
+
+      if (indicators.includes("inflation_expectation")) {
+        const inflation = await fetchInflation();
+        datasets.push({
+          label: "Inflatieverwachting (%)",
+          data: inflation,
+          borderColor: "green",
+          yAxisID: "y2"
+        });
+      }
+
+      const cryptos = {
+        btc: "bitcoin",
         xrp: "ripple",
-        bluzelle: "bluzelle",
-        vechain: "vechain"
+        vechain: "vechain",
+        blz: "bluzelle"
       };
 
-      if (selected === "all" || coins[selected]) {
-        const selectedCoins = selected === "all" ? Object.keys(coins) : [selected];
-
-        for (let key of selectedCoins) {
-          const res = await fetch(`https://api.coingecko.com/api/v3/coins/${coins[key]}/market_chart?vs_currency=usd&days=30`);
-          const data = await res.json();
+      for (const key of Object.keys(cryptos)) {
+        if (indicators.includes(key)) {
+          const cryptoData = await fetchCrypto(cryptos[key]);
           datasets.push({
-            label: `${key.toUpperCase()} / USD`,
-            data: data.prices.map(p => ({ x: new Date(p[0]), y: p[1] })),
-            borderColor: getColor(key),
-            yAxisID: "y1",
-            tension: 0.2
+            label: key.toUpperCase() + " ($)",
+            data: cryptoData,
+            borderColor: getRandomColor(),
+            yAxisID: "y1"
           });
         }
       }
 
-      // FRED indicatoren toevoegen (voorbeeld: BBP en CPI)
-      const fredIndicators = [
-        { id: "GDP", label: "BBP (miljarden USD)", color: "blue" },
-        { id: "CPIAUCSL", label: "CPI (Inflatie)", color: "green" },
-        { id: "UNRATE", label: "Werkloosheid (%)", color: "red" }
-      ];
-
-      for (let ind of fredIndicators) {
-        const res = await fetch(`${proxy}https://api.stlouisfed.org/fred/series/observations?series_id=${ind.id}&api_key=${apiKey}&file_type=json`);
-        const json = await res.json();
-        datasets.push({
-          label: ind.label,
-          data: json.observations.filter(o => o.value !== ".").map(o => ({ x: new Date(o.date), y: parseFloat(o.value) })),
-          borderColor: ind.color,
-          yAxisID: "y2",
-          tension: 0.2
-        });
-      }
-
       if (chart) chart.destroy();
-
-      chart = new Chart(chartEl, {
+      chart = new Chart(ctx, {
         type: "line",
         data: { datasets },
         options: {
@@ -97,12 +93,12 @@
             y1: {
               type: "linear",
               position: "left",
-              title: { display: true, text: "Crypto (USD)" }
+              title: { display: true, text: "Crypto ($)" }
             },
             y2: {
               type: "linear",
               position: "right",
-              title: { display: true, text: "Economische Indicator" },
+              title: { display: true, text: "Inflatieverwachting (%)" },
               grid: { drawOnChartArea: false }
             }
           }
@@ -110,17 +106,11 @@
       });
     }
 
-    function getColor(name) {
-      const colors = {
-        bitcoin: "orange",
-        xrp: "purple",
-        bluzelle: "teal",
-        vechain: "brown"
-      };
-      return colors[name] || "gray";
+    function getRandomColor() {
+      return `rgb(${Math.floor(Math.random()*255)}, ${Math.floor(Math.random()*255)}, ${Math.floor(Math.random()*255)})`;
     }
 
-    fetchData();
+    updateChart();
   </script>
 </body>
 </html>
