--- a/public/index.html
+++ b/public/index.html
@@ -1,49 +1,33 @@
+
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Crypto & Economische Indicatoren</title>
+  <meta charset="UTF-8">
+  <title>Crypto & FRED Indicator Dashboard</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/luxon@3/build/global/luxon.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon@1"></script>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f8f9fa;
-      padding: 20px;
-      text-align: center;
-    }
-    h1 {
-      margin-bottom: 20px;
-    }
-    canvas {
-      max-width: 1000px;
-      margin: 20px auto;
-      display: block;
-    }
-    .controls {
-      margin-bottom: 20px;
-    }
-    .controls label {
-      margin-right: 10px;
-    }
+    body { font-family: Arial; padding: 20px; background: #f5f5f5; }
+    h1 { text-align: center; }
+    #controls { text-align: center; margin-bottom: 20px; }
+    canvas { max-width: 1000px; margin: 0 auto; display: block; }
   </style>
 </head>
 <body>
-  <h1>Crypto & VS Economische Indicatoren</h1>
-
-  <div class="controls">
-    <label><input type="checkbox" class="indicator" value="btc" checked> Bitcoin (BTC)</label>
-    <label><input type="checkbox" class="indicator" value="xrp" checked> XRP</label>
-    <label><input type="checkbox" class="indicator" value="vechain" checked> VeChain</label>
-    <label><input type="checkbox" class="indicator" value="blz" checked> Bluzelle</label>
-    <label><input type="checkbox" class="indicator" value="inflation" checked> VS Inflatieverwachting</label>
+  <h1>Crypto & FRED Indicator Dashboard</h1>
+  <div id="controls">
+    <h3>FRED Indicatoren</h3>
+    <label><input type="checkbox" class="indicator" value="GNPCA"> Bruto Nationaal Product</label>
+<label><input type="checkbox" class="indicator" value="UNRATE"> Werkloosheid (%)</label>
+<label><input type="checkbox" class="indicator" value="CPIAUCSL"> Consumentenprijsindex (inflatie)</label>
+    <h3>Crypto's</h3>
+    <label><input type="checkbox" class="crypto" value="bitcoin"> Bitcoin (BTC)</label>
+<label><input type="checkbox" class="crypto" value="ripple"> XRP</label>
+<label><input type="checkbox" class="crypto" value="vechain"> VeChain</label>
+<label><input type="checkbox" class="crypto" value="bluzelle"> Bluzelle</label>
+    <br><br>
     <button onclick="updateChart()">Update Grafiek</button>
   </div>
-
-  <canvas id="chart" width="1000" height="500"></canvas>
-
+  <canvas id="chart" height="400"></canvas>
   <script src="script.js"></script>
 </body>
 </html>
