--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,33 @@
-
 <!DOCTYPE html>
 <html lang="nl">
 <head>
   <meta charset="UTF-8">
-  <title>Crypto & FRED Indicator Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Crypto & FRED Dashboard</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family: Arial; padding: 20px; background: #f5f5f5; }
-    h1 { text-align: center; }
-    #controls { text-align: center; margin-bottom: 20px; }
-    canvas { max-width: 1000px; margin: 0 auto; display: block; }
+    body { font-family: Arial; padding:20px; text-align:center; }
+    .controls label { margin: 0 8px; }
+    canvas { max-width:800px; margin:20px auto; display:block; }
   </style>
 </head>
 <body>
-  <h1>Crypto & FRED Indicator Dashboard</h1>
-  <div id="controls">
-    <h3>FRED Indicatoren</h3>
-    <label><input type="checkbox" class="indicator" value="GNPCA"> Bruto Nationaal Product</label>
-<label><input type="checkbox" class="indicator" value="UNRATE"> Werkloosheid (%)</label>
-<label><input type="checkbox" class="indicator" value="CPIAUCSL"> Consumentenprijsindex (inflatie)</label>
-    <h3>Crypto's</h3>
-    <label><input type="checkbox" class="crypto" value="bitcoin"> Bitcoin (BTC)</label>
-<label><input type="checkbox" class="crypto" value="ripple"> XRP</label>
-<label><input type="checkbox" class="crypto" value="vechain"> VeChain</label>
-<label><input type="checkbox" class="crypto" value="bluzelle"> Bluzelle</label>
+  <h1>Crypto & FRED Indicatoren</h1>
+  <div class="controls">
+    <!-- FRED indicators -->
+    <label><input type="checkbox" class="fred" value="GDP" checked> BBP (GDP)</label>
+    <label><input type="checkbox" class="fred" value="UNRATE" checked> Werkloosheid (UNRATE)</label>
+    <label><input type="checkbox" class="fred" value="CPIAUCSL" checked> CPI (CPIAUCSL)</label>
+    <br><br>
+    <!-- Crypto coins -->
+    <label><input type="checkbox" class="crypto" value="bitcoin" checked> BTC</label>
+    <label><input type="checkbox" class="crypto" value="ripple" checked> XRP</label>
+    <label><input type="checkbox" class="crypto" value="vechain"> VeChain</label>
+    <label><input type="checkbox" class="crypto" value="bluzelle"> Bluzelle</label>
     <br><br>
     <button onclick="updateChart()">Update Grafiek</button>
   </div>
-  <canvas id="chart" height="400"></canvas>
+  <canvas id="chart"></canvas>
   <script src="script.js"></script>
 </body>
 </html>
