--- a/index.html
+++ b/index.html
@@ -1,64 +1,36 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Crypto & FRED Indicator Dashboard</title>
-
-  <!-- Chart.js -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <!-- Date-adapter voor Chart.js (time scales) -->
-  <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
-
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background: #f5f5f5;
-      text-align: center;
-    }
-    .controls {
-      margin-bottom: 20px;
-    }
-    .controls label {
-      margin: 0 8px;
-      font-size: 0.9em;
-    }
-    button {
-      margin-top: 10px;
-      padding: 6px 12px;
-    }
-    canvas {
-      max-width: 800px;
-      margin: 20px auto;
-      display: block;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Crypto & FRED Indicatoren (€)</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4"></script>
+    <script src="script.js" defer></script>
+    <style>
+        body { font-family: Arial, sans-serif; padding: 20px; background: #f7f7f7; }
+        canvas { width: 100% !important; height: 600px !important; }
+    </style>
 </head>
 <body>
+    <h2>Crypto & FRED Economische Indicatoren (€)</h2>
 
-  <h1>Crypto & FRED Indicatoren</h1>
-
-  <div class="controls">
-    <!-- FRED indicator-checkboxen -->
-    <label><input type="checkbox" class="fred" value="GDP" checked> BBP (GDP)</label>
-    <label><input type="checkbox" class="fred" value="UNRATE" checked> Werkloosheid</label>
-    <label><input type="checkbox" class="fred" value="CPIAUCSL" checked> Inflatie (CPI)</label>
+    <div>
+        <strong>Economische Indicatoren:</strong><br>
+        <input type="checkbox" class="indicator" value="GDP" id="GDP" checked> <label for="GDP">BBP (GDP)</label>
+        <input type="checkbox" class="indicator" value="UNRATE" id="UNRATE"> <label for="UNRATE">Werkloosheid (%)</label>
+        <input type="checkbox" class="indicator" value="CPIAUCSL" id="CPIAUCSL"> <label for="CPIAUCSL">Inflatie (%)</label>
+        <input type="checkbox" class="indicator" value="DGS10" id="DGS10"> <label for="DGS10">10-jaar rente (%)</label>
+    </div>
     <br>
-
-    <!-- Crypto-checkboxen -->
-    <label><input type="checkbox" class="crypto" value="bitcoin" checked> BTC</label>
-    <label><input type="checkbox" class="crypto" value="ripple" checked> XRP</label>
-    <label><input type="checkbox" class="crypto" value="vechain"> VeChain</label>
-    <label><input type="checkbox" class="crypto" value="bluzelle"> Bluzelle</label>
+    <div>
+        <strong>Crypto:</strong><br>
+        <input type="checkbox" class="crypto" value="bitcoin" id="bitcoin" checked> <label for="bitcoin">BTC (€)</label>
+        <input type="checkbox" class="crypto" value="ripple" id="ripple"> <label for="ripple">XRP (€)</label>
+        <input type="checkbox" class="crypto" value="vechain" id="vechain"> <label for="vechain">VeChain (€)</label>
+        <input type="checkbox" class="crypto" value="bluzelle" id="bluzelle"> <label for="bluzelle">Bluzelle (€)</label>
+    </div>
     <br>
-
     <button onclick="updateChart()">Update Grafiek</button>
-  </div>
 
-  <canvas id="chart" height="400"></canvas>
-
-  <!-- Je eigen script: -->
-  <script src="script.js"></script>
+    <canvas id="chart"></canvas>
 </body>
 </html>
