--- a/index.html
+++ b/index.html
@@ -1,145 +1,182 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
-    <meta charset="UTF-8">
-    <title>Crypto & FRED Indicatoren</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            background-color: #f4f4f4;
-            text-align: center;
-        }
-        canvas {
-            width: 90vw;
-            height: 60vh;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Crypto & FRED Indicatoren</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background-color: #f7f9fc;
+      color: #333;
+      text-align: center;
+    }
+
+    h2 {
+      margin-bottom: 10px;
+    }
+
+    .controls {
+      margin-bottom: 15px;
+    }
+
+    .controls label {
+      margin-right: 10px;
+    }
+
+    button {
+      margin-top: 10px;
+      padding: 8px 16px;
+      background-color: #007acc;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #005fa3;
+    }
+
+    #release-info {
+      margin-top: 40px;
+      text-align: left;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+      background: #ffffff;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 15px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    #release-info h3 {
+      margin-top: 0;
+    }
+  </style>
 </head>
 <body>
 
-<h2>Crypto & FRED Indicatoren</h2>
+  <h2>Crypto & FRED Indicatoren</h2>
 
-<!-- Economische indicatoren -->
-<div>
-    <label><input type="checkbox" class="indicator" value="GDP" checked> BBP (GDP)</label>
+  <div class="controls">
+    <label><input type="checkbox" class="indicator" value="GDP"> BBP (GDP)</label>
     <label><input type="checkbox" class="indicator" value="UNRATE"> Werkloosheid (%)</label>
     <label><input type="checkbox" class="indicator" value="CPIAUCNS"> Inflatie (CPI)</label>
     <label><input type="checkbox" class="indicator" value="PPIACO"> Producentenprijsindex</label>
-    <label><input type="checkbox" class="indicator" value="HOUST"> Nieuwe woningen</label>
-</div>
-
-<!-- Crypto -->
-<div>
-    <label><input type="checkbox" class="crypto" value="bitcoin" checked> Bitcoin (€)</label>
+    <label><input type="checkbox" class="indicator" value="PERMIT"> Nieuwe woningen</label>
+    <br>
+    <label><input type="checkbox" class="crypto" value="bitcoin"> Bitcoin (€)</label>
     <label><input type="checkbox" class="crypto" value="ripple"> XRP (€)</label>
     <label><input type="checkbox" class="crypto" value="vechain"> VeChain (€)</label>
     <label><input type="checkbox" class="crypto" value="bluzelle"> Bluzelle (€)</label>
-</div>
+    <br>
+    <button onclick="updateChart()">Update Grafiek</button>
+  </div>
 
-<button onclick="updateChart()">Update Grafiek</button>
+  <canvas id="chart" width="1000" height="500"></canvas>
 
-<canvas id="chart"></canvas>
+  <div id="release-info"></div>
 
-<script>
-const ctx = document.getElementById('chart').getContext('2d');
-let chart;
+  <script>
+    const ctx = document.getElementById('chart').getContext('2d');
+    let chart;
 
-const FRED_API_KEY = '2e36ea2956c8ea9b075070975eb33c66';
-const FRED_BASE = 'https://api.stlouisfed.org/fred/series/observations';
-const CRYPTO_API = 'https://api.coingecko.com/api/v3/coins';
+    const FRED_API_KEY = '2e36ea2956c8ea9b075070975eb33c66';
+    const FRED_BASE = 'https://api.stlouisfed.org/fred/series/observations';
+    const CRYPTO_API = 'https://api.coingecko.com/api/v3/coins';
 
-async function fetchFredData(seriesId) {
-    try {
-        const response = await fetch(`${FRED_BASE}?series_id=${seriesId}&api_key=${FRED_API_KEY}&file_type=json`);
-        const data = await response.json();
-        return data.observations
-            .filter(obs => obs.value !== ".")
-            .map(obs => ({x: obs.date, y: parseFloat(obs.value)}));
-    } catch (err) {
-        console.error("Fout bij ophalen FRED-data:", err);
-        return [];
+    async function fetchFredData(seriesId) {
+      const response = await fetch(`${FRED_BASE}?series_id=${seriesId}&api_key=${FRED_API_KEY}&file_type=json`);
+      const data = await response.json();
+      return data.observations.map(obs => ({ x: obs.date, y: parseFloat(obs.value) }));
     }
-}
 
-async function fetchCryptoPrices(id) {
-    try {
-        const res = await fetch(`${CRYPTO_API}/${id}/market_chart?vs_currency=eur&days=365`);
-        const json = await res.json();
-        return json.prices.map(p => ({
-            x: new Date(p[0]).toISOString().split('T')[0],
-            y: p[1]
-        }));
-    } catch (err) {
-        console.error("Fout bij ophalen crypto-data:", err);
-        return [];
+    async function fetchCryptoPrices(id) {
+      const res = await fetch(`${CRYPTO_API}/${id}/market_chart?vs_currency=eur&days=365`);
+      const json = await res.json();
+      return json.prices.map(p => ({ x: new Date(p[0]).toISOString().split('T')[0], y: p[1] }));
     }
-}
 
-async function updateChart() {
-    const indicatorEls = document.querySelectorAll('.indicator:checked');
-    const cryptoEls = document.querySelectorAll('.crypto:checked');
-    const datasets = [];
+    async function updateChart() {
+      const indicatorEls = document.querySelectorAll('.indicator:checked');
+      const cryptoEls = document.querySelectorAll('.crypto:checked');
+      const datasets = [];
 
-    for (let el of indicatorEls) {
+      for (let el of indicatorEls) {
         const data = await fetchFredData(el.value);
         datasets.push({
-            label: `Econ. ${el.value}`,
-            data,
-            borderColor: getRandomColor(),
-            yAxisID: 'y',
-            tension: 0.3
+          label: `Econ. ${el.value}`,
+          data,
+          borderColor: getRandomColor(),
+          yAxisID: 'y',
+          tension: 0.3
         });
-    }
+      }
 
-    for (let el of cryptoEls) {
+      for (let el of cryptoEls) {
         const data = await fetchCryptoPrices(el.value);
         datasets.push({
-            label: `Crypto ${el.value}`,
-            data,
-            borderColor: getRandomColor(),
-            yAxisID: 'y1',
-            tension: 0.3
+          label: `Crypto ${el.value}`,
+          data,
+          borderColor: getRandomColor(),
+          yAxisID: 'y1',
+          tension: 0.3
         });
-    }
+      }
 
-    if (chart) chart.destroy();
+      if (chart) chart.destroy();
 
-    chart = new Chart(ctx, {
+      chart = new Chart(ctx, {
         type: 'line',
         data: { datasets },
         options: {
-            responsive: true,
-            interaction: { mode: 'index', intersect: false },
-            scales: {
-                x: {
-                    type: 'time',
-                    time: { unit: 'month' },
-                    title: { display: true, text: 'Datum' }
-                },
-                y: {
-                    type: 'linear',
-                    position: 'left',
-                    title: { display: true, text: 'Economische Indicator' }
-                },
-                y1: {
-                    type: 'linear',
-                    position: 'right',
-                    title: { display: true, text: 'Crypto (€)' },
-                    grid: { drawOnChartArea: false }
-                }
-            }
+          responsive: true,
+          interaction: { mode: 'index', intersect: false },
+          scales: {
+            y: { type: 'linear', position: 'left' },
+            y1: { type: 'linear', position: 'right' }
+          }
         }
-    });
-}
+      });
+    }
 
-function getRandomColor() {
-    return `rgb(${[1,2,3].map(() => Math.floor(Math.random()*200)).join(',')})`;
-}
+    function getRandomColor() {
+      return `rgb(${[1, 2, 3].map(() => Math.floor(Math.random() * 255)).join(',')})`;
+    }
 
-updateChart(); // automatisch bij het laden
-</script>
+    async function fetchFredReleaseDates() {
+      try {
+        const response = await fetch(`https://api.stlouisfed.org/fred/releases/dates?api_key=${FRED_API_KEY}&file_type=json`);
+        const data = await response.json();
+
+        if (!data.release_dates) {
+          console.error("Geen release_dates gevonden in API response:", data);
+          return;
+        }
+
+        const container = document.getElementById('release-info');
+        container.innerHTML = '<h3>Laatste FRED Releases</h3>';
+
+        const ul = document.createElement('ul');
+        data.release_dates.slice(0, 10).forEach(rel => {
+          const li = document.createElement('li');
+          li.textContent = `${rel.date}: ${rel.release_name}`;
+          ul.appendChild(li);
+        });
+
+        container.appendChild(ul);
+      } catch (error) {
+        console.error("Fout bij het ophalen van FRED release data:", error);
+      }
+    }
+
+    // Initieel laden
+    updateChart();
+    fetchFredReleaseDates();
+  </script>
 
 </body>
 </html>
