--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
             margin: auto;
         }
         iframe {
-            width: 670px;
-            height: 525px;
+            width: 100%;
+            height: 600px;
             border: none;
-            margin-top: 30px;
         }
     </style>
 </head>
@@ -44,12 +43,11 @@
 
     <button onclick="updateChart()">Update Grafiek</button>
 
-    <div>
-        <h3>FRED Grafiek</h3>
-        <iframe src="https://fred.stlouisfed.org/graph/graph-landing.php?g=1IMrW&width=670&height=475" scrolling="no" frameborder="0" style="overflow:hidden; width:670px; height:525px;" allowTransparency="true" loading="lazy"></iframe>
-    </div>
-
     <canvas id="chart"></canvas>
+
+    <!-- FRED Graph Integration -->
+    <h3>FRED Grafiek</h3>
+    <iframe src="https://fred.stlouisfed.org/graph/graph-landing.php?g=1IMrW&width=670&height=475" scrolling="no" frameborder="0" style="overflow:hidden; width:670px; height:525px;" allowTransparency="true" loading="lazy"></iframe>
 
     <script src="script.js"></script>
 </body>
